# poetry-project-starter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cicd.yml
src/: main.py
